# fuse77-sb2-contract-first-api/src/spec/openapi-spec.json
@@ -1,145 +1,271 @@
 {
-    "openapi": "3.0.2",
-    "info": {
-        "title": "New API",
-        "version": "1.0.0",
-        "description": "A brand new API with no content.  Go nuts!"
-    },
-    "paths": {
-        "/cocktails": {
-            "summary": "Path used to manage the list of cocktails.",
-            "description": "The REST endpoint/path used to list and create zero or more `cocktail` entities.  This path contains a `GET` and `POST` operation to perform the list and create tasks, respectively.",
-            "get": {
-                "responses": {
-                    "200": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/cocktail"
-                                    }
-                                }
-                            }
-                        },
-                        "description": "Successful response - returns an array of `cocktail` entities."
-                    }
-                },
-                "operationId": "getcocktails",
-                "summary": "List All cocktails",
-                "description": "Gets a list of all `cocktail` entities."
+  "openapi": "3.0.2",
+  "info": {
+    "title": "Drinks API",
+    "version": "1.0.0",
+    "description": "A brand new API with no content.  Go nuts!"
+  },
+  "paths": {
+    "/cocktails": {
+      "get": {
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/cocktail"
+                  }
+                }
+              }
             },
-            "post": {
-                "requestBody": {
-                    "description": "A new `cocktail` to be created.",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/cocktail"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "responses": {
-                    "201": {
-                        "description": "Successful response."
-                    }
-                },
-                "operationId": "createcocktail",
-                "summary": "Create a cocktail",
-                "description": "Creates a new instance of a `cocktail`."
-            }
+            "description": "Successful response - returns an array of `cocktail` entities."
+          }
         },
-        "/cocktails/{cocktailId}": {
-            "summary": "Path used to manage a single cocktail.",
-            "description": "The REST endpoint/path used to get, update, and delete single instances of an `cocktail`.  This path contains `GET`, `PUT`, and `DELETE` operations used to perform the get, update, and delete tasks, respectively.",
-            "get": {
-                "responses": {
-                    "200": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/cocktail"
-                                }
-                            }
-                        },
-                        "description": "Successful response - returns a single `cocktail`."
-                    }
-                },
-                "operationId": "getcocktail",
-                "summary": "Get a cocktail",
-                "description": "Gets the details of a single instance of a `cocktail`."
-            },
-            "put": {
-                "requestBody": {
-                    "description": "Updated `cocktail` information.",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/cocktail"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "responses": {
-                    "202": {
-                        "description": "Successful response."
-                    }
-                },
-                "operationId": "updatecocktail",
-                "summary": "Update a cocktail",
-                "description": "Updates an existing `cocktail`."
-            },
-            "delete": {
-                "responses": {
-                    "204": {
-                        "description": "Successful response."
-                    }
-                },
-                "operationId": "deletecocktail",
-                "summary": "Delete a cocktail",
-                "description": "Deletes an existing `cocktail`."
-            },
-            "parameters": [
-                {
-                    "name": "cocktailId",
-                    "description": "A unique identifier for a `cocktail`.",
-                    "schema": {
-                        "type": "string"
-                    },
-                    "in": "path",
-                    "required": true
-                }
-            ]
-        }
-    },
-    "components": {
-        "schemas": {
-            "cocktail": {
-                "title": "Root Type for cocktail",
-                "description": "Refreshing beverage",
-                "type": "object",
-                "properties": {
-                    "name": {
-                        "type": "string"
-                    },
-                    "rating": {
-                        "format": "double",
-                        "type": "number"
-                    },
-                    "strength": {
-                        "format": "int32",
-                        "type": "integer"
-                    }
-                },
-                "example": {
-                    "name": "Dry Martini",
-                    "rating": 8.5,
-                    "strength": 3
-                }
+        "operationId": "getcocktails",
+        "summary": "List All cocktails",
+        "description": "Gets a list of all `cocktail` entities."
+      },
+      "post": {
+        "requestBody": {
+          "description": "A new `cocktail` to be created.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/cocktail"
+              }
             }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Successful response."
+          }
+        },
+        "operationId": "createcocktail",
+        "summary": "Create a cocktail",
+        "description": "Creates a new instance of a `cocktail`."
+      }
+    },
+    "/cocktails/{cocktailId}": {
+      "get": {
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/cocktail"
+                }
+              }
+            },
+            "description": "Successful response - returns a single `cocktail`."
+          }
+        },
+        "operationId": "getcocktail",
+        "summary": "Get a cocktail",
+        "description": "Gets the details of a single instance of a `cocktail`."
+      },
+      "put": {
+        "requestBody": {
+          "description": "Updated `cocktail` information.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/cocktail"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "202": {
+            "description": "Successful response."
+          }
+        },
+        "operationId": "updatecocktail",
+        "summary": "Update a cocktail",
+        "description": "Updates an existing `cocktail`."
+      },
+      "delete": {
+        "responses": {
+          "204": {
+            "description": "Successful response."
+          }
+        },
+        "operationId": "deletecocktail",
+        "summary": "Delete a cocktail",
+        "description": "Deletes an existing `cocktail`."
+      },
+      "parameters": [
+        {
+          "name": "cocktailId",
+          "description": "A unique identifier for a `cocktail`.",
+          "schema": {
+            "type": "string"
+          },
+          "in": "path",
+          "required": true
         }
+      ]
+    },
+    "/wines": {
+      "get": {
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/wine"
+                  }
+                }
+              }
+            },
+            "description": "Successful response - returns an array of `wine` entities."
+          }
+        },
+        "operationId": "getwines",
+        "summary": "List All wines",
+        "description": "Gets a list of all `wine` entities."
+      },
+      "post": {
+        "requestBody": {
+          "description": "A new `wine` to be created.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/wine"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Successful response."
+          }
+        },
+        "operationId": "createwine",
+        "summary": "Create a wine",
+        "description": "Creates a new instance of a `wine`."
+      }
+    },
+    "/wines/{wineId}": {
+      "get": {
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/wine"
+                }
+              }
+            },
+            "description": "Successful response - returns a single `wine`."
+          }
+        },
+        "operationId": "getwine",
+        "summary": "Get a wine",
+        "description": "Gets the details of a single instance of a `wine`."
+      },
+      "put": {
+        "requestBody": {
+          "description": "Updated `wine` information.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/wine"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "202": {
+            "description": "Successful response."
+          }
+        },
+        "operationId": "updatewine",
+        "summary": "Update a wine",
+        "description": "Updates an existing `wine`."
+      },
+      "delete": {
+        "responses": {
+          "204": {
+            "description": "Successful response."
+          }
+        },
+        "operationId": "deletewine",
+        "summary": "Delete a wine",
+        "description": "Deletes an existing `wine`."
+      },
+      "parameters": [
+        {
+          "name": "wineId",
+          "description": "A unique identifier for a `wine`.",
+          "schema": {
+            "type": "string"
+          },
+          "in": "path",
+          "required": true
+        }
+      ]
     }
+  },
+  "components": {
+    "schemas": {
+      "cocktail": {
+        "title": "Root Type for cocktail",
+        "description": "Refreshing beverage",
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "rating": {
+            "format": "double",
+            "type": "number"
+          },
+          "strength": {
+            "format": "int32",
+            "type": "integer"
+          },
+          "garnish": {
+            "type": "string"
+          }
+        },
+        "example": {
+          "name": "Dry Martini",
+          "rating": 8.5,
+          "strength": 3,
+          "garnish": "olive"
+        }
+      },
+      "wine": {
+        "title": "Root Type for wine",
+        "description": "Red or white",
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "colour": {
+            "type": "string"
+          },
+          "rating": {
+            "format": "double",
+            "type": "number"
+          }
+        },
+        "example": {
+          "name": "Marlborough",
+          "colour": "white",
+          "rating": 9.5
+        }
+      }
+    }
+  }
 }
